feat: add support for health endpoint
